--- a/therewhere/therewhere/MainMapViewController.xib
+++ b/therewhere/therewhere/MainMapViewController.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainMapViewController">
             <connections>
                 <outlet property="contactButton" destination="LHf-gH-vG0" id="AtW-ho-VM5"/>
+                <outlet property="friendProfile" destination="612-fF-ZmE" id="z33-I4-66M"/>
                 <outlet property="mapView" destination="SIG-YC-Nxm" id="whk-aD-e9X"/>
                 <outlet property="meetButton" destination="32F-Y6-NAk" id="45p-fL-tR0"/>
                 <outlet property="navigateButton" destination="20u-MV-Yzw" id="XS2-dA-bES"/>
@@ -56,6 +57,15 @@
                     </state>
                     <connections>
                         <action selector="contact:" destination="-1" eventType="touchUpInside" id="4ZR-R6-BSo"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="612-fF-ZmE">
+                    <rect key="frame" x="255" y="37" width="39" height="30"/>
+                    <state key="normal" title="friend">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="friendProfile:" destination="-1" eventType="touchUpInside" id="FUm-NM-l7L"/>
                     </connections>
                 </button>
             </subviews>
