--- a/therewhere/therewhere/CustomTableViewCell.xib
+++ b/therewhere/therewhere/CustomTableViewCell.xib
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C106a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Suj-JN-57h" customClass="CustomTableViewCell" customModule="therewhere" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" placeholderIntrinsicWidth="269" placeholderIntrinsicHeight="60" selectionStyle="default" indentationWidth="10" id="Suj-JN-57h" customClass="CustomTableViewCell" customModule="therewhere" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="269" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Suj-JN-57h" id="WdS-qV-r00">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="button" translatesAutoresizingMaskIntoConstraints="NO" id="j7H-sF-D7M">
-                        <rect key="frame" x="0.0" y="0.0" width="269" height="61"/>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Marcelo Lebre" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKe-1q-ppv">
-                        <rect key="frame" x="0.0" y="20" width="269" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                        <rect key="frame" x="36" y="17" width="197" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="meetupicon" translatesAutoresizingMaskIntoConstraints="NO" id="2Dj-bG-PMZ">
+                        <rect key="frame" x="231" y="13" width="30" height="30"/>
+                        <color key="tintColor" red="0.67467619243421051" green="0.67208588449331741" blue="0.9205106160287081" alpha="1" colorSpace="calibratedRGB"/>
+                    </imageView>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                <color key="backgroundColor" red="0.18274568256578946" green="0.67208588449331741" blue="0.73622299267344493" alpha="1" colorSpace="calibratedRGB"/>
             </tableViewCellContentView>
             <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
+                <outlet property="meetupicon" destination="2Dj-bG-PMZ" id="xZT-7P-yU8"/>
                 <outlet property="titleLabel" destination="LKe-1q-ppv" id="N5b-FR-JQ3"/>
             </connections>
             <point key="canvasLocation" x="232.5" y="192"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="button" width="316" height="57"/>
+        <image name="meetupicon" width="256" height="256"/>
     </resources>
 </document>
